--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
@@ -18,10 +19,11 @@
     <!-- HEADER -->
 
     <header>
-      <nav>
+      <div class="container page-header-container">
+           <nav class="page-nav">
         <a class="link logo" href="./index.html" title="Web Studio"
           ><span>Web</span>Studio</a>
-        <ul class="menu list">
+        <ul class="menu-list list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
           </li>
@@ -33,17 +35,18 @@
           </li>
         </ul>
       </nav>
-      <ul class="list">
+      <ul class="contact-list list">
         <li>
-          <a class="contact link" href="mailto:info@devstudio.com"
+          <a class="contact-item link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a>
         </li>
         <li>
-          <a class="contact link" href="tel:+11(000)111-11-11"
+          <a class="contact-item link" href="tel:+11(000)111-11-11"
             >+11 (000) 111-11-11</a>
         </li>
       </ul>
-    </header>
+      </div>
+       </header>
 
     <!-- HERO -->
 
