--- a/index.html
+++ b/index.html
@@ -11,48 +11,56 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-
     <!-- HEADER -->
 
     <header>
       <div class="container page-header-container">
-           <nav class="page-nav">
-        <a class="link logo" href="./index.html" title="Web Studio"
-          ><span>Web</span>Studio</a>
-        <ul class="menu-list list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
+        <nav class="page-nav">
+          <a class="link logo" href="./index.html" title="Web Studio"
+            ><span>Web</span>Studio</a
+          >
+          <ul class="menu-list list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list list">
+          <li>
+            <a class="contact-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="#">Contacts</a>
+          <li>
+            <a class="contact-item link" href="tel:+11(000)111-11-11"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="contact-list list">
-        <li>
-          <a class="contact-item link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="contact-item link" href="tel:+11(000)111-11-11"
-            >+11 (000) 111-11-11</a>
-        </li>
-      </ul>
       </div>
-       </header>
+    </header>
 
     <!-- HERO -->
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">
+          Effective Solutions <br />
+          for Your Business
+        </h1>
         <button class="modal-button" type="button">Order Service</button>
       </section>
 
@@ -60,129 +68,144 @@
 
       <section class="advantage-section">
         <h2 class="advantage-title">Our advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="suptitle">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="suptitle">Punctuality</h3>
-            <p class="description-section">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="suptitle">Diligence</h3>
-            <p class="description-section">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="suptitle">Technologies</h3>
-            <p class="description-section">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="advantages-list list">
+            <li class="advantages-items">
+              <h3 class="suptitle">Strategy</h3>
+              <p class="description-section">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="suptitle">Punctuality</h3>
+              <p class="description-section">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="suptitle">Diligence</h3>
+              <p class="description-section">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="suptitle">Technologies</h3>
+              <p class="description-section">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- ABOUT -->
 
-      <section>
+      <section class="section activity">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/whatwearedoing1.jpg"
-              alt="Activity of the company first"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/whatwearedoing2.jpg"
-              alt="Activity of the company second"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/whatwearedoing3.jpg"
-              alt="Activity of the company third"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="activity-list list">
+            <li class="activity-item">
+              <img
+                src="./images/whatwearedoing1.jpg"
+                alt="Activity of the company first"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="activity-item">
+              <img
+                src="./images/whatwearedoing2.jpg"
+                alt="Activity of the company second"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="activity-item">
+              <img
+                src="./images/whatwearedoing3.jpg"
+                alt="Activity of the company third"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- TEAM -->
-      <section class="team-section">
+      <section class="team-section section">
         <h2 class="section-title">Our team</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/productdesigner.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="suptitle"><b>Mark Guerrero</b></h3>
-            <p class="description-section">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/frontenddeveloper.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="suptitle"><b>Tom Ford</b></h3>
-            <p class="description-section">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/marketing.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="suptitle"><b>Camila Garcia</b></h3>
-            <p class="description-section">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/uidesigner.jpg"
-              alt="Маркетолог"
-              width="264"
-              height="260"
-            />
-            <h3 class="suptitle"><b>Daniel Wilson</b></h3>
-            <p class="description-section">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/productdesigner.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-title-description">
+              <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
+              <p class="description-section">Product Designer</p>
+            </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/frontenddeveloper.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-title-description">
+              <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
+              <p class="description-section">Frontend Developer</p>
+            </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/marketing.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+                 <div class="team-title-description">
+              <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
+              <p class="description-section">Marketing</p>
+           </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/uidesigner.jpg"
+                alt="Маркетолог"
+                width="264"
+                height="260"
+              />
+              <div class="team-title-description">
+              <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
+              <p class="description-section">UI Designer</p>
+           </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-<!-- Footer -->
+    <!-- Footer -->
 
     <footer class="footer">
-       <a class="link logo-footer" href="./index.html" title="Web Studio"
-          ><span>Web</span> Studio</a>
-      <p  class="description-section footer-about" >
-        Increase the flow of customers and sales for your business with digital
+      <div class="footer-container container">
+      <a class="link logo-footer" href="./index.html" title="Web Studio"
+        ><span>Web</span> Studio</a
+      >
+      <p class="description-section footer-about">
+        Increase the flow of customers and <br/> sales for your business with digital <br/>
         marketing and growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
-
-
