--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <div class="container page-header-container">
         <nav class="page-nav">
           <a class="link logo" href="./index.html" title="Web Studio"
-            ><span>Web</span>Studio</a
-          >
+            ><span>Web</span>Studio</a>
           <ul class="menu-list list">
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
