--- a/portfolio.html
+++ b/portfolio.html
@@ -53,9 +53,7 @@
       </div>
     </header>
 
-
     <!-- Filter -->
-
 
     <main>
       <section>
@@ -79,13 +77,11 @@
           </ul>
         </div>
 
-
-<!-- List of project cards -->
-
+        <!-- List of project cards -->
 
         <h1 class="section-card-title">Project cards</h1>
 
-       <div class="container card-container">
+        <div class="container card-container">
           <ul class="list card-list">
             <li class="card-item">
               <a class="link" href="#"
@@ -95,10 +91,10 @@
                   width="360"
                   height="300"
                 />
-               <div class="card-item-name">
+                <div class="card-item-name">
                   <h2 class="card-title">Banking App Interface Concept</h2>
                   <p class="card-description">App</p>
-               </div>
+                </div>
               </a>
             </li>
             <li class="card-item">
@@ -109,16 +105,16 @@
                   width="360"
                   height="300"
                 />
-               <div class="card-item-name">
+                <div class="card-item-name">
                   <h2 class="card-title">Cashless Payment</h2>
                   <p class="card-description">Marketing</p>
-               </div></a
+                </div></a
               >
             </li>
             <li class="card-item">
               <a class="link" href="#"
                 ><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
-                <div class="card-item-name ">
+                <div class="card-item-name">
                   <h2 class="card-title">Meditaion App</h2>
                   <p class="card-description">App</p>
                 </div></a
@@ -160,10 +156,10 @@
                   width="360"
                   height="300"
                 />
-               <div class="card-item-name">
+                <div class="card-item-name">
                   <h2 class="card-title">Online Courses</h2>
                   <p class="card-description">Marketing</p>
-               </div></a
+                </div></a
               >
             </li>
             <li class="card-item">
@@ -188,10 +184,10 @@
                   width="360"
                   height="300"
                 />
-              <div class="card-item-name">
+                <div class="card-item-name">
                   <h2 class="card-title">Organic Food</h2>
                   <p class="card-description">Web Site</p>
-              </div></a
+                </div></a
               >
             </li>
             <li class="card-item">
@@ -205,25 +201,26 @@
                 <div class="card-item-name">
                   <h2 class="card-title">Fresh Coffee</h2>
                   <p class="card-description">Web Site</p>
-                </div> </a
-              >
+                </div>
+              </a>
             </li>
           </ul>
-       </div>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
-     <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
-      <a class="link logo-footer" href="./index.html" title="Web Studio"
-        ><span>Web</span> Studio</a
-      >
-      <p class="description-section footer-about">
-        Increase the flow of customers and <br/> sales for your business with digital <br/>
-        marketing and growth solutions.
-      </p>
+        <a class="link logo-footer" href="./index.html" title="Web Studio"
+          ><span>Web</span> Studio</a
+        >
+        <p class="description-section footer-about">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing and growth solutions.
+        </p>
       </div>
     </footer>
   </body>
