--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <ul class="contact-list list">
-          <li>
+          <li class="contact-mail">
             <a class="contact-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
@@ -56,8 +56,10 @@
     <!-- Filter -->
 
     <main>
-      <section>
+      <section class="section-cards">
         <div class="container">
+          <h1 class="section-card-title">Project cards</h1>
+
           <ul class="list filter-list">
             <li class="filter-item">
               <button class="modal-button" type="button">All</button>
@@ -75,13 +77,9 @@
               <button class="modal-button" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
 
-        <!-- List of project cards -->
+          <!-- List of project cards -->
 
-        <h1 class="section-card-title">Project cards</h1>
-
-        <div class="container card-container">
           <ul class="list card-list">
             <li class="card-item">
               <a class="link" href="#"
@@ -212,14 +210,13 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <div class="footer-container container">
+      <div class="container">
         <a class="link logo-footer" href="./index.html" title="Web Studio"
           ><span>Web</span> Studio</a
         >
         <p class="description-section footer-about">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing and growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing and growth solutions.
         </p>
       </div>
     </footer>
