--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <body>
     <!-- HEADER -->
 
-    <header>
+    <header class="border-top">
       <div class="container page-header-container">
         <nav class="page-nav">
           <a class="link logo" href="./index.html" title="Web Studio"
-            ><span>Web</span>Studio</a>
+            ><span>Web</span>Studio</a
+          >
           <ul class="menu-list list">
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
@@ -38,12 +39,12 @@
           </ul>
         </nav>
         <ul class="contact-list list">
-          <li>
+          <li class="contact-mail">
             <a class="contact-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-tel">
             <a class="contact-item link" href="tel:+11(000)111-11-11"
               >+11 (000) 111-11-11</a
             >
@@ -104,8 +105,8 @@
       <!-- ABOUT -->
 
       <section class="section activity">
-        <h2 class="section-title">What are we doing</h2>
         <div class="container">
+          <h2 class="section-title">What are we doing</h2>
           <ul class="activity-list list">
             <li class="activity-item">
               <img
@@ -137,8 +138,8 @@
 
       <!-- TEAM -->
       <section class="team-section section">
-        <h2 class="section-title">Our team</h2>
         <div class="container">
+          <h2 class="section-title">Our team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
@@ -148,9 +149,9 @@
                 height="260"
               />
               <div class="team-title-description">
-              <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
-              <p class="description-section">Product Designer</p>
-            </div>
+                <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
+                <p class="description-section">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -160,9 +161,9 @@
                 height="260"
               />
               <div class="team-title-description">
-              <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
-              <p class="description-section">Frontend Developer</p>
-            </div>
+                <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
+                <p class="description-section">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -171,10 +172,10 @@
                 width="264"
                 height="260"
               />
-                 <div class="team-title-description">
-              <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
-              <p class="description-section">Marketing</p>
-           </div>
+              <div class="team-title-description">
+                <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
+                <p class="description-section">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -184,9 +185,9 @@
                 height="260"
               />
               <div class="team-title-description">
-              <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
-              <p class="description-section">UI Designer</p>
-           </div>
+                <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
+                <p class="description-section">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -196,14 +197,14 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <div class="footer-container container">
-      <a class="link logo-footer" href="./index.html" title="Web Studio"
-        ><span>Web</span> Studio</a
-      >
-      <p class="description-section footer-about">
-        Increase the flow of customers and <br/> sales for your business with digital <br/>
-        marketing and growth solutions.
-      </p>
+      <div class="container">
+        <a class="link logo-footer" href="./index.html" title="Web Studio"
+          ><span>Web</span> Studio</a
+        >
+        <p class="description-section footer-about">
+          Increase the flow of customers and sales for your business with
+          digital marketing and growth solutions.
+        </p>
       </div>
     </footer>
   </body>
