--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
       <!-- ADVANTAGES -->
 
       <section class="advantage-section">
-        <h2 class="advantage-title">Our advantages</h2>
+        <h2 class="hidden-title">Our advantages</h2>
         <div class="container">
           <ul class="advantages-list list">
             <li class="advantages-items">
+              <div class="icon">
+              <svg class="icon-item" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-antenna" > 
+                </use>
+              </svg>
+             </div>
               <h3 class="suptitle">Strategy</h3>
               <p class="description-section">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +84,12 @@
               </p>
             </li>
             <li class="advantages-items">
+               <div class="icon">
+              <svg class="icon-item" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-clock" > 
+                </use>
+              </svg>
+             </div>
               <h3 class="suptitle">Punctuality</h3>
               <p class="description-section">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +97,12 @@
               </p>
             </li>
             <li class="advantages-items">
+              <div class="icon">
+              <svg class="icon-item" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-diagram" > 
+                </use>
+              </svg>
+             </div>
               <h3 class="suptitle">Diligence</h3>
               <p class="description-section">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +110,12 @@
               </p>
             </li>
             <li class="advantages-items">
+              <div class="icon">
+              <svg class="icon-item" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-astronaut" > 
+                </use>
+              </svg>
+             </div>
               <h3 class="suptitle">Technologies</h3>
               <p class="description-section">
                 Design practice focused on digital experiences. We bring forth a
@@ -151,7 +175,29 @@
               <div class="team-title-description">
                 <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
                 <p class="description-section">Product Designer</p>
-              </div>
+               <ul class="social-media-list list">
+                <li class="social-media-item">
+                  <a href="#" class="social-media-link link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                   <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
+               </div>
             </li>
             <li class="team-item">
               <img
@@ -163,6 +209,28 @@
               <div class="team-title-description">
                 <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
                 <p class="description-section">Frontend Developer</p>
+                <ul class="social-media-list list">
+                <li class="social-media-item">
+                  <a href="#" class="social-media-link link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                   <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
               </div>
             </li>
             <li class="team-item">
@@ -175,6 +243,28 @@
               <div class="team-title-description">
                 <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
                 <p class="description-section">Marketing</p>
+                <ul class="social-media-list list">
+                <li class="social-media-item">
+                  <a href="#" class="social-media-link link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                   <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
               </div>
             </li>
             <li class="team-item">
@@ -187,6 +277,28 @@
               <div class="team-title-description">
                 <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
                 <p class="description-section">UI Designer</p>
+                <ul class="social-media-list list">
+                <li class="social-media-item">
+                  <a href="#" class="social-media-link link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                   <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="social-media-item"><a href="" class="social-media-link">
+                  <svg class="social-media-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
               </div>
             </li>
           </ul>
@@ -194,10 +306,72 @@
       </section>
     </main>
 
+
+<!-- --Customers-- -->
+
+<section class="section">
+      <div class="container">
+  <h2 class="section-title">Customers</h2>
+<ul class="clients-list list">
+  <li class="clients-item">
+    <a href="" class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-first"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="clients-item">
+    <a href=""  class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-second"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="clients-item">
+    <a href=""  class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-third"></use>
+      </svg>
+    </a>
+  </li> 
+   <li  class="clients-item">
+    <a href=""  class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-fourth"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="clients-item">
+    <a href=""  class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-fifth"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="clients-item">
+    <a href=""  class="clients-item-link link">
+      <svg class="clients-icon">
+        <use href="./images/icons.svg#icon-clients-six"></use>
+      </svg>
+    </a>
+  </li>
+</ul>  
+</div>
+</section>
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-common-contain">
+        <div class="footer-contain-first">
         <a class="link logo-footer" href="./index.html" title="Web Studio"
           ><span>Web</span> Studio</a
         >
@@ -205,7 +379,34 @@
           Increase the flow of customers and sales for your business with
           digital marketing and growth solutions.
         </p>
-      </div>
+         </div>
+           <div class="footer-contain-second">
+                <p class="footer-media-text">Social media</p>
+                    <ul class="footer-media-list list">
+                <li class="footer-media-item">
+                  <a href="#" class="footer-media-link link">
+                  <svg class="footer-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                   <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                  <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                  <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+                </ul>
+          </div>   
+        </div>
     </footer>
   </body>
+
 </html>
