Homework 4 from Go It. Portfolio document, changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -209,8 +209,10 @@
 
     <!-- Footer -->
 
+
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-common-contain">
+        <div class="footer-contain-first">
         <a class="link logo-footer" href="./index.html" title="Web Studio"
           ><span>Web</span> Studio</a
         >
@@ -218,7 +220,34 @@
           Increase the flow of customers and sales for your business with
           digital marketing and growth solutions.
         </p>
-      </div>
+         </div>
+           <div class="footer-contain-second">
+                <p class="footer-media-text">Social media</p>
+                    <ul class="footer-media-list list">
+                <li class="footer-media-item">
+                  <a href="#" class="footer-media-link link">
+                  <svg class="footer-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                   <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                  <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a></li>
+                <li class="footer-media-item"><a href="" class="footer-media-link">
+                  <svg class="social-media-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+                </ul>
+          </div>   
+        </div>
     </footer>
   </body>
+
 </html>
