--- a/portfolio.html
+++ b/portfolio.html
@@ -209,45 +209,50 @@
 
     <!-- Footer -->
 
-
     <footer class="footer">
       <div class="container footer-common-contain">
         <div class="footer-contain-first">
-        <a class="link logo-footer" href="./index.html" title="Web Studio"
-          ><span>Web</span> Studio</a
-        >
-        <p class="description-section footer-about">
-          Increase the flow of customers and sales for your business with
-          digital marketing and growth solutions.
-        </p>
-         </div>
-           <div class="footer-contain-second">
-                <p class="footer-media-text">Social media</p>
-                    <ul class="footer-media-list list">
-                <li class="footer-media-item">
-                  <a href="#" class="footer-media-link link">
-                  <svg class="footer-media-icon" width="24px" height="24px">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a></li>
-                <li class="footer-media-item"><a href="" class="footer-media-link">
-                   <svg class="social-media-icon" width="24px" height="24px">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a></li>
-                <li class="footer-media-item"><a href="" class="footer-media-link">
-                  <svg class="social-media-icon" width="24px" height="24px">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></a></li>
-                <li class="footer-media-item"><a href="" class="footer-media-link">
-                  <svg class="social-media-icon" width="24px" height="24px">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a></li>
-                </ul>
-          </div>   
+          <a class="link logo-footer" href="./index.html" title="Web Studio"
+            ><span>Web</span> Studio</a
+          >
+          <p class="description-section footer-about">
+            Increase the flow of customers and sales for your business with
+            digital marketing and growth solutions.
+          </p>
         </div>
+        <div class="footer-contain-second">
+          <p class="footer-media-text">Social media</p>
+          <ul class="footer-media-list list">
+            <li class="footer-media-item">
+              <a href="#" class="footer-media-link link">
+                <svg class="footer-media-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a href="" class="footer-media-link">
+                <svg class="social-media-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a href="" class="footer-media-link">
+                <svg class="social-media-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-media-item">
+              <a href="" class="footer-media-link">
+                <svg class="social-media-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
-
 </html>
