Homework 04. Edit hovers on cards in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
 
           <ul class="list card-list">
             <li class="card-item">
-              <a class="link" href="#"
+              <a href="#" class="link link-card"
                 ><img
                   src="./images/BankingApp.jpg"
                   alt="Banking App Interface Concept"
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link" href="#">
+              <a href="#" class="link link-card">
                 <img
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
@@ -110,7 +110,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#"
+              <a href="#" class="link link-card"
                 ><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
                 <div class="card-item-name">
                   <h2 class="card-title">Meditaion App</h2>
@@ -119,7 +119,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#">
+              <a href="#" class="link link-card">
                 <img
                   src="./images/TaxiService.jpg"
                   alt="Taxi Service"
@@ -133,7 +133,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#"
+              <a href="#" class="link link-card"
                 ><img
                   src="./images/ScreenIllustrations.jpg"
                   alt="Screen Illustrations"
@@ -147,7 +147,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#">
+              <a href="#" class="link link-card">
                 <img
                   src="./images/OnlineCourses.jpg"
                   alt="Online Courses"
@@ -161,7 +161,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#"
+              <a href="#" class="link link-card"
                 ><img
                   src="./images/InstagramStories.jpg"
                   alt="Instagram Stories Concept"
@@ -175,7 +175,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#">
+              <a href="#" class="link link-card">
                 <img
                   src="./images/OrganicFood.jpg"
                   alt="Organic Food"
@@ -189,7 +189,7 @@
               >
             </li>
             <li class="card-item">
-              <a class="link" href="#"
+              <a href="#" class="link link-card"
                 ><img
                   src="./images/FreshCoffee.jpg"
                   alt="Fresh Coffee"
